# minishell

./: .gitignore  CMakeLists.txt  Makefile  minishell.h
includes/: libft.h  minishell.h  minishell_executor.h  minishell_parser.h
libraries/libft/: Makefile  libft.h
libraries/libft/srcs/: ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_dlstadd_after.c  ft_dlstadd_back.c  ft_dlstadd_front.c  ft_dlstclear.c  ft_dlstdelone.c  ft_dlstfirst.c  ft_dlstiter.c  ft_dlstlast.c  ft_dlstmap.c  ft_dlstnew.c  ft_dlstsize.c  ft_dlstsize_full.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back_bonus.c  ft_lstadd_front_bonus.c  ft_lstclear_bonus.c  ft_lstdelone_bonus.c  ft_lstiter_bonus.c  ft_lstlast_bonus.c  ft_lstmap_bonus.c  ft_lstnew_bonus.c  ft_lstsize_bonus.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  (+18 more)
srcs/: main.c  minishell_prepare.c  minishell_start.c
srcs/executor/: exec.c  executor.c  list.c  pipe.c
srcs/executor/built-in/: env.c  exit.c
srcs/parser/: constructors.c  lexer.c  lexer_utils.c  minishell_prepare.c  minishell_start.c  parser.c  utils.c
srcs/utils/: env_edit.c  env_get.c  env_insert.c  exit_alert.c  free_token.c  init_app.c  init_env.c  init_shell_data.c
